<resources>
    <string name="app_name">YAK</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="logout">Log out</string>
    <string name="email">EMAIL</string>
    <string name="enterEmail">ENTER EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="passwordRepeat">REPEAT PASSWORD</string>
    <string name="remindPassword">REMIND PASSWORD</string>
    <string name="studiedElements">ALL STUDIED ELEMENTS</string>
    <string name="study">STUDY</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="credits">Credits</string>
    <string name="creditsValues">Programmer: Paulina Binas\nTibetan language consultant: Tenzin Choewang\nGraphic designer: Anna Ludwin</string>
    <string name="changeLanguage">CHANGE LANGUAGE</string>
    <string name="changePassword">CHANGE PASSWORD</string>
    <string name="english">ENGLISH</string>
    <string name="polish">POLSKI</string>
    <string name="oldPassword">OLD PASSWORD</string>
    <string name="newPassword">NEW PASSWORD</string>
    <string name="passwordChangeFailure">Password change failed!\nTry again</string>
    <string name="passwordChangeSuccess">Password changed!</string>
    <string name="reviseIn">revise in: </string>
    <string name="wordsLearnt">words learnt: </string>
    <string name="signsLearnt">signs learnt: </string>
    <string name="grammarLearnt">grammar learnt: </string>
    <string name="writeSign">write the sign down</string>
    <string name="writeItDown">write it down:</string>
    <string name="pronounceIt">pronounce it</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="visualizeMeaning">Visualize the meaning of:</string>
    <string name="question">\?</string>
    <string name="days">days</string>
    <string name="one_day">day</string>
    <string name="changeLimit">CHANGE NEW DAILY CARDS LIMIT</string>
    <string name="newCardsPerDay">"New cards per day: "</string>
    <string name="save">SAVE</string>
    <string name="congrats">Congratulations!</string>
    <string name="youAreDone">You have finished the study for today. Come back tomorrow!</string>
    <string name="finish">FINISH</string>
    <string name="registerFail">Registration failed. Try again.</string>
    <string name="passwordReset">"Password reset link has been sent to the provided email."</string>
</resources>
