<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/options"
    android:weightSum="3"
    tools:context=".ui.settings.view.SettingsActivity">

    <fragment
        android:id="@+id/fragment"
        android:name="com.binas.yak.ui.main.view.TransparentActionBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/small_yak" />

            <LinearLayout
                android:id="@+id/creditsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/creditsValues"
                    android:textAlignment="center" />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:gravity="center" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeLimit"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_button"
            android:onClick="onClickChangeLimit" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeLanguage"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_button"
            android:onClick="onClickChangeLanguage" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePassword"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_button"
            android:onClick="onClickGoToChangePassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_button"
            android:onClick="onClickLogoutButton" />

    </LinearLayout>

</LinearLayout>