<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:weightSum="2"
    tools:context=".ui.main.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/small_yak" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/studiedElementsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/studiedElements"
            android:textSize="20sp" />

        <Button
            android:id="@+id/studyButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/study"
            android:textSize="20sp"
            android:onClick="onClickGoToStudy" />

        <Button
            android:id="@+id/achievementButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/achievements"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>