<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:weightSum="2"
    tools:context=".ui.authentication.authMenu.view.AuthMenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/small_yak" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/logInButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/rounded_button"
            android:ems="10"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:text="@string/login"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:onClick="onClickLoginButtonInMenu"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:ems="10"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:hint="@string/signup"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:onClick="onClickSignUpButtonInMenu"/>

    </LinearLayout>
</LinearLayout>